--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -123,10 +123,10 @@ nav:
     - Guides:
       - guides/pathways.md
       - Stack List: guides/scenerystack_list.md
+      - FAQ: guides/faqs.md
       - Web Development:
         - Scenery and phet-lib: guides/scenery.md
-        - First Walkthrough: guides/walkthrough.md
-        - Demos: guides/demos.md
+        - (pending) Walkthrough: guides/walkthrough.md
       - Simulation Development:
         - guides/simulation/simulation-development.md
         - PhET Development Guide: info-sync/simulation-development-overview.md
