fix deploy workflow

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Project information
 site_name: SceneryStack
-site_url: https://scenerystack.github.io/community/
+site_url: https://scenerystack.org/
 site_author: PhET Interactive Simulations
 site_description: >-
   This site houses resources for the developer community using the libraries within SceneryStack 
