--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,14 @@ csscompressor==0.9.5
 ghp-import==2.1.0
 htmlmin2==0.1.13
 idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
 Jinja2==3.1.4
 jsmin==3.0.1
 Markdown==3.7
 MarkupSafe==3.0.2
 mergedeep==1.3.4
+mike==2.1.3
 mkdocs==1.6.1
 mkdocs-get-deps==0.2.0
 mkdocs-material==9.5.44
@@ -25,6 +28,7 @@ pathspec==0.12.1
 platformdirs==4.3.6
 Pygments==2.18.0
 pymdown-extensions==10.12
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 pyyaml_env_tag==0.1
@@ -32,4 +36,6 @@ regex==2024.11.6
 requests==2.32.3
 six==1.16.0
 urllib3==2.2.3
+verspec==0.1.0
 watchdog==6.0.0
+zipp==3.21.0
