--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -135,7 +135,7 @@ markdown_extensions:
   - pymdownx.tilde
 
 nav:
-    - Overview: index.md
+    - Introduction: index.md
     - Getting Started: 
       - Choose Your Path: guides/pathways.md
       - Setup: guides/setup.md
