revamp organization and fix refs https://github.com/scenerystack/community/issues/66

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: page-deploy-on-push
 on:
   push:
     branches:
-      - main
+      - draft # THIS IS TEMPORARY - SWITCH TO MAIN WHEN READY
 permissions:
   contents: write
 jobs:
