color scheme changes and text fixes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: page-deploy-on-push
 on:
   push:
     branches:
-      - draft # THIS IS TEMPORARY - SWITCH TO MAIN WHEN READY
+      - main
 permissions:
   contents: write
 jobs:
