--- a/package.json
+++ b/package.json
@@ -1,3 +1,9 @@
 {
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "eslint": "^9.17.0",
+    "globals": "^15.14.0",
+    "@eslint/js": "^9.17.0",
+    "typescript-eslint": "^8.18.2"
+  }
 }
